--- a/codingtest.ipynb
+++ b/codingtest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 31,
    "id": "093f54c0",
    "metadata": {},
    "outputs": [],
@@ -15,88 +15,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
-   "id": "4dd7efc3",
+   "execution_count": 138,
+   "id": "9064f5d8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solution(maps):\n",
-    "    vertical, horizontal = len(maps), len(maps[0])\n",
-    "    maps = [list(map(str, maps[i])) for i in range(len(maps))]\n",
-    "    dx, dy = [-1, 1, 0, 0], [0, 0, 1, -1]\n",
-    "    result = []\n",
-    "    \n",
-    "    def bfs(i, j):\n",
-    "        queue = deque()\n",
-    "        queue.append((i, j))\n",
-    "        visited = []\n",
-    "        count = 0\n",
-    "        \n",
-    "        while queue:\n",
-    "            x, y = queue.popleft()\n",
+    "def orangesRotting(grid: List[List[int]]) -> int:\n",
+    "    queue = []\n",
+    "    ans = -1\n",
+    "    M, N = len(grid), len(grid[0])\n",
+    "    for i in range(M):\n",
+    "        for j in range(N):\n",
+    "            if grid[i][j] == 2:\n",
+    "                queue.append((i, j))\n",
+    "\n",
+    "    dx, dy = [-1, 1, 0, 0], [0, 0, -1, 1]\n",
+    "\n",
+    "    while queue:\n",
+    "        rotten = queue.copy()\n",
+    "        queue.clear()\n",
+    "\n",
+    "        for x, y in rotten:\n",
     "            for i in range(4):\n",
     "                new_x, new_y = x + dx[i], y + dy[i]\n",
-    "                if 0 <= new_x < vertical and 0 <= new_y < horizontal and (new_x, new_y) not in visited and maps[new_x][new_y] != 'X':\n",
+    "                if 0 <= new_x < M and 0 <= new_y < N and grid[new_x][new_y] == 1:\n",
+    "                    grid[new_x][new_y] = 2\n",
     "                    queue.append((new_x, new_y))\n",
-    "                    visited.append((new_x, new_y))\n",
-    "\n",
-    "            count += int(maps[x][y])\n",
-    "            maps[x][y] = 'X'\n",
-    "        return count\n",
-    "    \n",
-    "    for i in range(vertical):\n",
-    "        for j in range(horizontal):\n",
-    "            if maps[i][j] != 'X':\n",
-    "                result.append(bfs(i, j))\n",
-    "    \n",
-    "    return sorted(result) if result else [-1]"
+    "        ans += 1\n",
+    "    for i in grid:\n",
+    "        for j in i:\n",
+    "            if j == 1:\n",
+    "                return - 1\n",
+    "    return ans if ans != -1 else 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
-   "id": "eee4a650",
+   "execution_count": 139,
+   "id": "3bac7545",
    "metadata": {},
    "outputs": [],
    "source": [
-    "maps = [\"X591X\",\"X1X5X\",\"X231X\", \"1XXX1\"]"
+    "grid = [[2,1,1],[1,1,0],[0,1,1]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
-   "id": "e531302e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "maps = [\"XXX\",\"XXX\",\"XXX\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 384,
-   "id": "0cab371c",
+   "execution_count": 140,
+   "id": "46e01b4a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[-1]"
+       "4"
       ]
      },
-     "execution_count": 384,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "solution(maps)"
+    "orangesRotting(grid)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b7032fa",
+   "id": "47dd3f23",
    "metadata": {},
    "outputs": [],
    "source": []
