--- a/codingtest.ipynb
+++ b/codingtest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "id": "093f54c0",
    "metadata": {},
    "outputs": [],
@@ -15,75 +15,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
-   "id": "9064f5d8",
+   "execution_count": 41,
+   "id": "47dd3f23",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def orangesRotting(grid: List[List[int]]) -> int:\n",
-    "    queue = []\n",
-    "    ans = -1\n",
-    "    M, N = len(grid), len(grid[0])\n",
-    "    for i in range(M):\n",
-    "        for j in range(N):\n",
-    "            if grid[i][j] == 2:\n",
-    "                queue.append((i, j))\n",
-    "\n",
-    "    dx, dy = [-1, 1, 0, 0], [0, 0, -1, 1]\n",
-    "\n",
-    "    while queue:\n",
-    "        rotten = queue.copy()\n",
-    "        queue.clear()\n",
-    "\n",
-    "        for x, y in rotten:\n",
-    "            for i in range(4):\n",
-    "                new_x, new_y = x + dx[i], y + dy[i]\n",
-    "                if 0 <= new_x < M and 0 <= new_y < N and grid[new_x][new_y] == 1:\n",
-    "                    grid[new_x][new_y] = 2\n",
-    "                    queue.append((new_x, new_y))\n",
-    "        ans += 1\n",
-    "    for i in grid:\n",
-    "        for j in i:\n",
-    "            if j == 1:\n",
-    "                return - 1\n",
-    "    return ans if ans != -1 else 0"
+    "def subsets(nums: List[int]) -> List[List[int]]:\n",
+    "    results = []\n",
+    "    \n",
+    "    def dfs(index, path):\n",
+    "        print(index, path)\n",
+    "        results.append(path)\n",
+    "        \n",
+    "        for i in range(index, len(nums)):\n",
+    "            print(path + [nums[i]])\n",
+    "            dfs(i + 1, path + [nums[i]])\n",
+    "    \n",
+    "    dfs(0, [])\n",
+    "    \n",
+    "    return results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
-   "id": "3bac7545",
+   "execution_count": 42,
+   "id": "9e66b520",
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid = [[2,1,1],[1,1,0],[0,1,1]]"
+    "nums = [1,2,3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
-   "id": "46e01b4a",
+   "execution_count": 43,
+   "id": "565bed09",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 []\n",
+      "[1]\n",
+      "1 [1]\n",
+      "[1, 2]\n",
+      "2 [1, 2]\n",
+      "[1, 2, 3]\n",
+      "3 [1, 2, 3]\n",
+      "[1, 3]\n",
+      "3 [1, 3]\n",
+      "[2]\n",
+      "2 [2]\n",
+      "[2, 3]\n",
+      "3 [2, 3]\n",
+      "[3]\n",
+      "3 [3]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "4"
+       "[[], [1], [1, 2], [1, 2, 3], [1, 3], [2], [2, 3], [3]]"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "orangesRotting(grid)"
+    "subsets(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "1a960ce6",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[2, 2, 3], [7]]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combinationSum(candidates, target)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47dd3f23",
+   "id": "eb681731",
    "metadata": {},
    "outputs": [],
    "source": []
