commit new codes

--- a/codingtest.ipynb
+++ b/codingtest.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "093f54c0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List\n",
+    "from typing import List, Optional\n",
     "from collections import defaultdict, Counter, deque\n",
     "import heapq\n",
     "import math"
@@ -15,106 +15,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "47dd3f23",
+   "execution_count": 3,
+   "id": "7276218a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def subsets(nums: List[int]) -> List[List[int]]:\n",
-    "    results = []\n",
+    "def solution(name):\n",
     "    \n",
-    "    def dfs(index, path):\n",
-    "        print(index, path)\n",
-    "        results.append(path)\n",
-    "        \n",
-    "        for i in range(index, len(nums)):\n",
-    "            print(path + [nums[i]])\n",
-    "            dfs(i + 1, path + [nums[i]])\n",
-    "    \n",
-    "    dfs(0, [])\n",
-    "    \n",
-    "    return results"
+    "    return answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "9e66b520",
+   "execution_count": 18,
+   "id": "2a781f62",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nums = [1,2,3]"
+    "def characterReplacement(s: str, k: int):\n",
+    "    answer = 0\n",
+    "    left = right = 0\n",
+    "    \n",
+    "    while right < len(s):\n",
+    "        counter = Counter(s[left:right + 1])\n",
+    "        a = counter.most_common(1)\n",
+    "        remain = right - left + 1 - a[0][1]\n",
+    "        if remain > k:\n",
+    "            left += 1\n",
+    "        else:\n",
+    "            answer = max(answer, right - left + 1)\n",
+    "        right += 1\n",
+    "    \n",
+    "    return answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "565bed09",
+   "execution_count": 21,
+   "id": "599d85fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = \"ABAB\"\n",
+    "k = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "d7b9f737",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 []\n",
-      "[1]\n",
-      "1 [1]\n",
-      "[1, 2]\n",
-      "2 [1, 2]\n",
-      "[1, 2, 3]\n",
-      "3 [1, 2, 3]\n",
-      "[1, 3]\n",
-      "3 [1, 3]\n",
-      "[2]\n",
-      "2 [2]\n",
-      "[2, 3]\n",
-      "3 [2, 3]\n",
-      "[3]\n",
-      "3 [3]\n"
+      "[('A', 1)]\n",
+      "[('A', 1)]\n",
+      "[('A', 2)]\n",
+      "[('A', 2)]\n",
+      "4\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[[], [1], [1, 2], [1, 2, 3], [1, 3], [2], [2, 3], [3]]"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "subsets(nums)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "1a960ce6",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[2, 2, 3], [7]]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "combinationSum(candidates, target)"
+    "characterReplacement(s, k)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb681731",
+   "id": "290fb3eb",
    "metadata": {},
    "outputs": [],
    "source": []
