commit binary search codes

--- a/codingtest.ipynb
+++ b/codingtest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "093f54c0",
    "metadata": {},
    "outputs": [],
@@ -15,77 +15,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "7276218a",
+   "execution_count": 442,
+   "id": "03101e92",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solution(name):\n",
-    "    \n",
-    "    return answer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "2a781f62",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def characterReplacement(s: str, k: int):\n",
-    "    answer = 0\n",
-    "    left = right = 0\n",
-    "    \n",
-    "    while right < len(s):\n",
-    "        counter = Counter(s[left:right + 1])\n",
-    "        a = counter.most_common(1)\n",
-    "        remain = right - left + 1 - a[0][1]\n",
-    "        if remain > k:\n",
-    "            left += 1\n",
+    "def minEatingSpeed(piles: List[int], h: int) -> int:\n",
+    "    answer = max(piles)\n",
+    "    candidates = list(range(1, answer + 1))\n",
+    "    left, right = 1, answer\n",
+    "    while left <= right:\n",
+    "        mid = (left + right) // 2\n",
+    "        \n",
+    "        times = sum(list(map(lambda x: math.ceil(x / mid), piles)))\n",
+    "\n",
+    "        if times > h:\n",
+    "            left = mid + 1\n",
     "        else:\n",
-    "            answer = max(answer, right - left + 1)\n",
-    "        right += 1\n",
+    "            answer = min(answer, mid)\n",
+    "            right = mid - 1\n",
     "    \n",
     "    return answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "599d85fe",
+   "execution_count": 446,
+   "id": "b83ee590",
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = \"ABAB\"\n",
-    "k = 2"
+    "piles = [3,6,7,11]\n",
+    "h = 8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "d7b9f737",
+   "execution_count": 444,
+   "id": "452cb4a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "piles = [30,11,23,4,20]\n",
+    "h = 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 447,
+   "id": "53a154b3",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('A', 1)]\n",
-      "[('A', 1)]\n",
-      "[('A', 2)]\n",
-      "[('A', 2)]\n",
-      "4\n"
-     ]
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 447,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "characterReplacement(s, k)"
+    "minEatingSpeed(piles, h)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "290fb3eb",
+   "id": "9fbc584a",
    "metadata": {},
    "outputs": [],
    "source": []
