commit binary search

--- a/codingtest.ipynb
+++ b/codingtest.ipynb
@@ -15,76 +15,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
-   "id": "03101e92",
+   "execution_count": 461,
+   "id": "1857c885",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def minEatingSpeed(piles: List[int], h: int) -> int:\n",
-    "    answer = max(piles)\n",
-    "    candidates = list(range(1, answer + 1))\n",
-    "    left, right = 1, answer\n",
+    "def findMin(nums: List[int]) -> int:\n",
+    "    left, right = 0, len(nums) - 1\n",
+    "    \n",
     "    while left <= right:\n",
     "        mid = (left + right) // 2\n",
     "        \n",
-    "        times = sum(list(map(lambda x: math.ceil(x / mid), piles)))\n",
-    "\n",
-    "        if times > h:\n",
-    "            left = mid + 1\n",
-    "        else:\n",
-    "            answer = min(answer, mid)\n",
+    "        if nums[mid + 1] < nums[mid]:\n",
+    "            return nums[mid + 1]\n",
+    "        if nums[mid] < nums[mid - 1]:\n",
+    "            return nums[mid]\n",
+    "        \n",
+    "        if nums[right] > nums[mid]:\n",
     "            right = mid - 1\n",
-    "    \n",
-    "    return answer"
+    "        else:\n",
+    "            left = mid + 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 446,
-   "id": "b83ee590",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "piles = [3,6,7,11]\n",
-    "h = 8"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 444,
-   "id": "452cb4a3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "piles = [30,11,23,4,20]\n",
-    "h = 6"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 462,
    "id": "53a154b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums = [3,4,5,1,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 463,
+   "id": "9fbc584a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "1"
       ]
      },
-     "execution_count": 447,
+     "execution_count": 463,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "minEatingSpeed(piles, h)"
+    "findMin(nums)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fbc584a",
+   "id": "679cc7d9",
    "metadata": {},
    "outputs": [],
    "source": []
