--- a/codingtest.ipynb
+++ b/codingtest.ipynb
@@ -15,63 +15,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 461,
-   "id": "1857c885",
+   "execution_count": 464,
+   "id": "b23f2dd4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def findMin(nums: List[int]) -> int:\n",
-    "    left, right = 0, len(nums) - 1\n",
+    "class TreeNode:\n",
+    "    def __init__(self, val=0, left=None, right=None):\n",
+    "        self.val = val\n",
+    "        self.left = left\n",
+    "        self.right = right"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 465,
+   "id": "1423b5e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def invertTree(root:TreeNode) -> TreeNode:\n",
+    "    queue = deque([root])\n",
     "    \n",
-    "    while left <= right:\n",
-    "        mid = (left + right) // 2\n",
-    "        \n",
-    "        if nums[mid + 1] < nums[mid]:\n",
-    "            return nums[mid + 1]\n",
-    "        if nums[mid] < nums[mid - 1]:\n",
-    "            return nums[mid]\n",
-    "        \n",
-    "        if nums[right] > nums[mid]:\n",
-    "            right = mid - 1\n",
-    "        else:\n",
-    "            left = mid + 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 462,
-   "id": "53a154b3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nums = [3,4,5,1,2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 463,
-   "id": "9fbc584a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 463,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "findMin(nums)"
+    "    while queue:\n",
+    "        node = queue.popleft()\n",
+    "        if node:\n",
+    "            node.left, node.right = node.right, node.left\n",
+    "            \n",
+    "            queue.append(node.left)\n",
+    "            queue.append(node.right)\n",
+    "    \n",
+    "    return root"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "679cc7d9",
+   "id": "ba4f9eb0",
    "metadata": {},
    "outputs": [],
    "source": []
