add tree directory

--- a/codingtest.ipynb
+++ b/codingtest.ipynb
@@ -16,26 +16,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 658,
-   "id": "881e9c6e",
+   "execution_count": 733,
+   "id": "83cb3073",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "6\n",
+      "10 20 10 30 20 50\n"
      ]
     }
    ],
    "source": [
-    "number = int(input())"
+    "N = int(input())\n",
+    "sequence = list(map(int, input().split(\" \")))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a199f232",
+   "id": "7dae3e02",
    "metadata": {},
    "outputs": [],
    "source": []
